# SJTU-Software

./: Getdataset.py  Our_First_Python.py  README.md  _loss.py  bin_dev.py  dev.py  model.py  requirements.txt  script  train.py  ytrain.py
Backend/DataAnalysis/: HNSC_miR_data.Rdata  RDA.py  bladder_bh_1.txt  feature_selection.py  miRNA_data_new.txt  miR_data_y.txt  plot.py  split_data.py  svm_model.py  us.txt  workspace.py
Backend/SHS/: cachefile  dd  hybrid.py  main_new.c
Education/Game/: Readme.md
Frontend/: 0.html  education.html  wiki_Human_Practices.html
Frontend/css/: custom.css
ModelV1/: AttentionAlign.py  Encoder_Layers.py  Full_Transformer.py  model.py
ModelV1/test/: ModelACC.record  ModelF1.record  ModelPresion.record
ModelV2/: Getdataset.py  _loss.py  dev.py
ModelV2/model/: Graph_Layer.py
ModelV2/utils/: Word.ckpt  outcat.py
ModelV3/: dev.py  folder.py
ModelV3/model/: attention_model.py
ModelV3/utils/: dash2mat.py
SVM/: SVM.md
Secondary Structure/: LICENSE  _loss.py  dev.py
Secondary Structure/model/: Graph_Layer.py
backend/: GNN_model_pred.py  Getdataset.py  dev.py  model_1d.py  simple_Model_pred.py
dataAnalysis/: .Rhistory  RDA.py  bh.txt  dataset.py  feature_selection.py  miR_data.csv  miR_data.txt  svm_model.py  workspace.py
model/: attention_layer.py
reliance/LinearPartition/: CMakeLists.txt  TR0.fasta  partition.fasta  test.fasta
reliance/LinearPartition/src/: LinearPartition.cpp  bpp.cpp
svm/: 5.30汇报.md  SVM.md
utils/: aligning.py  embedding.py  label_embedding.py  node2vec.py
webv1/: manage.py
(+109 files in other folders)
